逻辑调整与优化